--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="manifest" href="site.webmanifest"> <!-- TODO: Update web app manifest file -->
     <link rel="icon" href="/favicon.ico"> <!-- TODO: Add favicon.ico file to project -->
     <!-- Bootstrap CDN-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="./bootstrap.min.css" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="/style.css">
     <!-- FA CDN -->
@@ -23,32 +22,31 @@
 </head>
 
 <body>
-    <script type="text/javascript">
-
-
-    </script>
     <div class="wrapper">
         <!-- Content start -->
         <!-- Header -->
         <section class="header-container bg-dark">
-            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <header
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                  <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap" src="./imgs/WPTI_Icon_White.png"></img>
+                    <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"
+                        src="./imgs/WPTI_Icon_White.png"></img>
                 </a>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
-                  <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
-                  <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
-                  <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
-                  <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                    <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
+                    <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
+                    <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
+                    <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
                 </ul>
-              </header>
+            </header>
         </section>
         <section class="landing-container">
             <img src="https://images.unsplash.com/photo-1565058379802-bbe93b2f703a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
-            <img class="title text-center col-6 col-md-4 col-lg-3 col-xl-3 col-xl-2 col-xxl-2 hero-img" src="imgs/logo1.png">
+            <img class="title text-center col-6 col-md-4 col-lg-3 col-xl-3 col-xl-2 col-xxl-2 hero-img"
+                src="imgs/logo1.png">
             <div class="title-addr d-flex justify-content-center">
             </div>
             <div class="title-btn d-flex justify-content-center">
@@ -64,10 +62,11 @@
                 </div>
             </div>
         </section>
-        <section id="artists"class="artists-container bg-dark pt-3 border-top">
+        <section id="artists" class="artists-container bg-dark pt-3 border-top">
             <div>
                 <div class="container">
-                    <h2 class="text-center border-bottom col-12 d-flex justify-content-center pb-2">Meet the Artists</h2>
+                    <h2 class="text-center border-bottom col-12 d-flex justify-content-center pb-2">Meet the Artists
+                    </h2>
                     <!--first artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
@@ -75,13 +74,13 @@
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="//placehold.it/800x400/557573" class="d-block h-50 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/557573" class="d-block h-50 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/557573" class="d-block h-50 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -123,16 +122,13 @@
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="//placehold.it/800x400/557573"
-                                            class="d-block mx-auto w-100 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/557573"
-                                            class="d-block mx-auto w-100 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="//placehold.it/800x400/557573"
-                                            class="d-block mx-auto w-100 img img-fluid">
+                                        <img src="//placehold.it/800x400/88b48d" class="d-block h-50 img img-fluid">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -169,7 +165,7 @@
                 </div>
             </div>
         </section>
-        <section id="connect"class="connect-container pt-3 pb-5 bg-dark">
+        <section id="connect" class="connect-container pt-3 pb-5 bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -188,38 +184,41 @@
             </div>
         </section>
         <section id="contact" class="contact-container bg-dark">
-<div class="container">
-    <div class="container">
-        <div class="row">
-            <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to you
-                as soon as possible.</h2>
-            <div class="container mt-2 d-flex justify-content-center col-12 col-md-6">
-                <div class="row">
-                    <form class="">
-                        <input class="col-sm-12 m-0" placeholder="Name..." required>
-                        <input class="col-sm-12 m-0" placeholder="Email..." required>
-                        <input class="col-sm-12 m-0" placeholder="Phone..." required>
-                        <textarea class="col-12" placeholder="Your message..." rows="4"></textarea>
-                        <button class="btn btn-primary col-12">Submit</button>
-                            </form>
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to
+                            you
+                            as soon as possible.</h2>
+                        <div class="container mt-2 d-flex justify-content-center col-12 col-md-6">
+                            <div class="row">
+                                <form class="">
+                                    <input class="col-12 m-0" placeholder="Name..." required>
+                                    <input class="col-12 m-0" placeholder="Email..." required>
+                                    <input class="col-12 m-0" placeholder="Phone..." required>
+                                    <textarea class="col-12" placeholder="Your message..." rows="4"></textarea>
+                                    <button class="btn btn-primary col-12">Submit</button>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- form -->
+                        <h3 class="text-center text-white contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
+                        <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
+                            <p class="bg-dark text-light p-3 rounded-1">
+                                *Due to a high volume of incoming messages, we encourage you to read our FAQ before
+                                sending
+                                us a message.
+                                This is to ensure that we respond to your inquiries as quickly and efficiently as
+                                possible.
+                                <br>Currently,
+                                walk-ins are <b>not available</b> at this time.
+                            </p>
+                        </div>
                     </div>
+                </div>
             </div>
-            <!-- form -->
-            <h3 class="text-center text-white contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
-            <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
-                <p class="bg-dark text-light">
-                    *Due to a high volume of incoming messages, we encourage you to read our FAQ before sending
-                    us a message.
-                    This is to ensure that we respond to your inquiries as quickly and efficiently as possible.
-                    <br>Currently,
-                    walk-ins are not available at this time.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
         </section>
-        <section class="faq-container bg-dark">
+        <section class="faq-container bg-dark m-5">
             <div class="container">
                 <div class="row">
                     <div class="text-center">
@@ -231,12 +230,62 @@
                     </div>
                 </div>
         </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="location-container container">
+            <div class="row">
+                <div class="col-12 col-md-6 d-flex justify-content-center">
+                    <div>
+                        <h5 class="text-light">99 Hopkins Blvd, Tiny, ON</h4>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d181448.81859503692!2d-80.13421322731679!3d44.71679930683888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d2aec94ef228fd7%3A0x887e3fa3231000ed!2sTiny%2C%20ON!5e0!3m2!1sen!2sca!4v1677373944008!5m2!1sen!2sca"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 d-flex justify-content-center">
+                    <div>
+                        <br class="border-bottom">
+                        <h4 class="text-light text-center">Hours:</h4>
+                        <table class="text-light">
+                            <tr>
+                                <th>Sunday &nbsp;</th>
+                                <td>Closed</td>
+                            </tr>
+                            <tr>
+                                <th>Monday &nbsp; </th>
+                                <td> 9am - 5pm</td>
+                            </tr>
+                            <tr>
+                                <th>Tuesday &nbsp;</th>
+                                <td> 9am - 5pm</td>
+                            </tr>
+                            <tr>
+                                <th>Wednesday &nbsp;</th>
+                                <td> 9am - 5pm</td>
+                            </tr>
+                            <tr>
+                                <th>Thursday &nbsp;</th>
+                                <td> 9am - 5pm</td>
+                            </tr>
+                        </table>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
         <!-- Footer -->
         <section class="footer-container bg-dark ">
             <div class="container">
-                <div class="row">
-
-                </div>
                 <footer class="py-3 my-4 text-light">
                     <div>
                         <p class="text-light text-center">Back to Top</p>
