fixed broken links

--- a/gallery.html
+++ b/gallery.html
@@ -36,10 +36,10 @@
                         src="./imgs/WPTI_Icon_White.png"></img>
                 </a>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                    <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="./index.html" class="nav-link px-2 link-secondary">Home</a></li>
                     <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
-                    <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
-                    <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
+                    <li><a href="./index.html" class="nav-link px-2 link-light">Artists</a></li>
+                    <li><a href="./index.html" class="nav-link px-2 link-light">Contact</a></li>
                     <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
                 </ul>
             </header>
@@ -118,10 +118,11 @@
                         <p class="text-light text-center">Back to Top</p>
                     </div>
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                        <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">About</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
+                        <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                        <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
+                        <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
+                        <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
+                        <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
                     </ul>
                     <div class="container-md">
                         <div class="row">
