--- a/FAQ.html
+++ b/FAQ.html
@@ -149,10 +149,11 @@
                     <a href="#faq"><p class="text-light text-center">Back to Top</p></a>
                 </div>
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                    <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link text-light " aria-current="page" href="./index.html">About</a>
-                    <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
-                    <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
+                    <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
+                    <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
+                    <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
+                    <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
                 </ul>
                 <div class="container-md">
                     <div class="row">
