--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
             </header>
         </section>
-        <section class="landing-container">
+        <section id="home"class="landing-container">
             <img src="https://images.unsplash.com/photo-1565058379802-bbe93b2f703a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
@@ -189,7 +189,7 @@
             <div class="container">
                 <div class="container">
                     <div class="row">
-                        <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to
+                        <h2 class="contact-text text-center">Want to book an appointment? fill out this form and we will get back to
                             you
                             as soon as possible.</h2>
                         <div class="container mt-2 d-flex justify-content-center col-12 col-md-6">
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                         <!-- form -->
-                        <h3 class="text-center text-white contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
+                        <h3 class="text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
                         <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
                             <p class="bg-dark text-light p-3 rounded-1">
                                 *Due to a high volume of incoming messages, we encourage you to read our FAQ before
@@ -290,7 +290,7 @@
             <div class="container">
                 <footer class="py-3 my-4 text-light">
                     <div>
-                        <p class="text-light text-center">Back to Top</p>
+                       <a href="#home"><p class="text-light text-center text">Back to Top</p></a> 
                     </div>
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
                         <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
